syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloGrpcProto";

package me.minikuma.v1;

message HelloRequest {
  string client_name = 1;
}

message HelloResponse {
  string welcome_message = 1;
}

service HelloService {
  rpc unaryHello (HelloRequest) returns (HelloResponse) {}
}